@@ -7,6 +7,8 @@ Post-v2.11.0
      * OVS validated with DPDK 18.11.2 which is the new minimal supported
        version.
      * DPDK 18.11.1 and lower is no longer supported.
+     * New option 'tx-retries-max' to set the maximum amount of vhost tx
+       retries that can be made.
    - OpenFlow:
      * All features required by OpenFlow 1.5 are now implemented, so
        ovs-vswitchd now enables OpenFlow 1.5 by default (in addition to
